--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "next": "^13.3.1",
     "react-icons": "^4.8.0",
     "zustand": "^4.3.7"
@@ -18,6 +19,7 @@
     "@types/react": "18.2.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
+    "prisma": "^4.13.0",
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   }
