--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.13.0",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "next": "^13.3.1",
+    "next-auth": "^4.22.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "swr": "^2.1.5",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "18.16.2",
     "@types/react": "18.2.0",
     "autoprefixer": "^10.4.14",
