--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@prisma/client": "^4.13.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.30.0",
     "next": "^13.3.1",
     "next-auth": "^4.22.1",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-spinners": "^0.13.8",
     "swr": "^2.1.5",
     "zustand": "^4.3.7"
   },
